--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,7 @@
     <meta name="Brian Do" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Fixed Top Navbar Example for Bootstrap</title>
+    <title>Publications: Brian Do</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
