--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   </head>
 
   <body>
-  <div id="content">
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -45,25 +44,24 @@
             <li><a href="publications.html">Publications</a></li>
             <li><a href="software.html">Software</a></li>
             <li><a href="other.html">Other</a></li>
-            </li>
           </ul>
         </div><!--/.nav-collapse -->
-      </div>
+      </div><!--/container -->
     </nav>
-    <div class="row">
-      <div class="col-md-3" align="center">
-        <td><img width="200" src="brian.PNG"></td>
-      </div>
-      <div class="col-md-9">
-        Hi! I'm a <b>biology and computer science</b> double major in the Class of 2016 at <a href="http://stanford.edu/">Stanford University</a>.<br><br>
-        I do undergraduate research in the lab of <a href="http://changlab.stanford.edu">Dr. Howard Chang</a>. I primarily study noncoding RNAs and their structure, interactions, and function. We are interested in how these RNAs orchestrate gene regulation, cell fate, and many other processes through noncanonical functions. Previously, I worked with <a href="http://urogene.org">Dr. Long-Cheng Li</a> at UCSF on small RNA-mediated gene activation in the worm C. elegans. <br><br>
-        I'm also excited by the role of technology in healthcare and other industries. During summer 2015, I interned at <a href="http://www.flatiron.com">Flatiron Health</a> in New York City as a Data Insights Engineer, where I helped build analytics tools on top of a million-patient clinicogenomic database that will be used for drug discovery and personalized medicine. <br><br>
-        In my free time I love running and biking. I follow college football pretty avidly and love learning new skills, whether it's a new instrument, programming language, or sport.
-      </div>
 
-
+    <div id="content">
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="200" src="brian.PNG"></td>
+        </div>
+        <div class="col-md-9">
+          Hi! I'm a biology and computer science double major in the Class of 2016 at <a href="http://stanford.edu/">Stanford University</a>.<br><br>
+          I do undergraduate research in the lab of <a href="http://changlab.stanford.edu">Dr. Howard Chang</a>. I primarily study noncoding RNAs and their structure, interactions, and function. We are interested in how these RNAs orchestrate gene regulation, cell fate, and many other processes through noncanonical functions. Previously, I worked with <a href="http://urogene.org">Dr. Long-Cheng Li</a> at UCSF on small RNA-mediated gene activation in the worm C. elegans. <br><br>
+          I'm also excited by the role of technology in healthcare and other industries. During summer 2015, I interned at <a href="http://www.flatiron.com">Flatiron Health</a> in New York City as a Data Insights Engineer, where I helped build analytics tools on top of a million-patient clinicogenomic database that will be used for drug discovery and personalized medicine. <br><br>
+          In my free time I love running and biking. I follow college football pretty avidly and love learning new skills, whether it's a new instrument, programming language, or sport.
+        </div>
+      </div>
     </div>
-  </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
