--- a/other.html
+++ b/other.html
@@ -25,7 +25,6 @@
   </head>
 
   <body>
-  <div id="content">
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -42,14 +41,14 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research Interests</a></li>
-            <li class="active"><a href="#">Publications</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="software.html">Software</a></li>
-            <li><a href="other.html">Other</a></li>
-            </li>
+            <li class="active"><a href="#">Other</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+  <div id="content">
     <h1>Other</h1>
     <h3>Coming soon!!</h3>
   </div>
