--- a/software.html
+++ b/software.html
@@ -43,9 +43,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research Interests</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <li class="active"><a href="software.html">Software</a></li>
+            <li class="active"><a href="#">Software</a></li>
             <li><a href="other.html">Other</a></li>
-            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
