--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="full" lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
 
   <body>
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -49,13 +49,13 @@
       </div>
     </nav>
     
-  <div id="content">
+  <div class="container panel">
     <h1>Publications</h1>
     <h3>From Howard Chang Lab (Stanford)</h3>
     <ol>
-      <li>Flynn RA, <b>Do BT</b>, Rubin A, Calo E, Lee B, Rale M, Kuchelmeister H, Rale M, Chu C, Kool ET, Wysocka J, Khavari PA, Chang HY. (2016) 7SK-BAF axis controls pervasive transcription at enhancers. <b>Nature Structural and Molecular Biology</b>, accepted.
-      <li>Flynn RA, Martin L, Spitale RC, <b>Do BT</b>, Sagan SM, Zarnegar B, Qu K, Khavari PA, Quake SR, Sarnow P, Chang HY (2015) <a href=http://rnajournal.cshlp.org/content/early/2014/11/19/rna.047803.114?top=1>Dissecting non-coding and pathogen RNA-protein interactomes.</a> <b>RNA</b> 21:1, 1-9.</li>
-      <li>Zheng GXY, <b>Do BT</b>, Webster DE, Khavari PA, Chang HY (2014) <a href="http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.2842.html">Dicer-microRNA-Myc circuit promotes transcription of hundreds of long noncoding RNAs. </a><b>Nature Structural and Molecular Biology</b> 21, 585-590. doi:10.1038/nsmb.2842. </li>
+      <li>Flynn RA, <b>Do BT</b>, Rubin A, Calo E, Lee B, Rale M, Kuchelmeister H, Rale M, Chu C, Kool ET, Wysocka J, Khavari PA, Chang HY. 7SK-BAF axis controls pervasive transcription at enhancers. Nature Structural and Molecular Biology, accepted.
+      <li>Flynn RA, Martin L, Spitale RC, <b>Do BT</b>, Sagan SM, Zarnegar B, Qu K, Khavari PA, Quake SR, Sarnow P, Chang HY. <a href=http://rnajournal.cshlp.org/content/early/2014/11/19/rna.047803.114?top=1>Dissecting non-coding and pathogen RNA-protein interactomes.</a> RNA (2015)
+      <li>Zheng GXY, <b>Do BT</b>, Webster DE, Khavari PA, Chang HY. <a href="http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.2842.html">Dicer-microRNA-Myc circuit promotes transcription of hundreds of long noncoding RNAs.</a> Nature Structural and Molecular Biology (2014)
     </ol>
 
     I also keep a running list of papers I've read on <a href="http://www.citeulike.org/user/bdo311/order/posted,,">CiteULike</a>.
@@ -66,7 +66,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
