--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,8 @@
     <h1>Publications</h1>
     <h3>From Howard Chang Lab (Stanford)</h3>
     <ol>
-      <li>Flynn RA, <b>Do BT</b>, Rubin A, Calo E, Lee B, Rale M, Kuchelmeister H, Rale M, Chu C, Kool ET, Wysocka J, Khavari PA, Chang HY. 7SK-BAF axis controls pervasive transcription at enhancers. Nature Structural and Molecular Biology, accepted.
+      <li>Tan JL, Fogley RD, Flynn RA, Ablain J, Yang S, Saint-Andre V, Fan ZP, <b>Do BT</b>, …, Chang HY, Young RA, Zon LI. Stress from nucleotide depletion activates the transcriptional regulator HEXIM1 to suppress melanoma. Molecular Cell, accepted (2016)
+      <li>Flynn RA, <b>Do BT</b>, Rubin A, Calo E, Lee B, Rale M, Kuchelmeister H, Rale M, Chu C, Kool ET, Wysocka J, Khavari PA, Chang HY. 7SK-BAF axis controls pervasive transcription at enhancers. Nature Structural and Molecular Biology, in press (2016)
       <li>Flynn RA, Martin L, Spitale RC, <b>Do BT</b>, Sagan SM, Zarnegar B, Qu K, Khavari PA, Quake SR, Sarnow P, Chang HY. <a href=http://rnajournal.cshlp.org/content/early/2014/11/19/rna.047803.114?top=1>Dissecting non-coding and pathogen RNA-protein interactomes.</a> RNA (2015)
       <li>Zheng GXY, <b>Do BT</b>, Webster DE, Khavari PA, Chang HY. <a href="http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.2842.html">Dicer-microRNA-Myc circuit promotes transcription of hundreds of long noncoding RNAs.</a> Nature Structural and Molecular Biology (2014)
     </ol>
