--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,7 @@
     <h1>Publications</h1>
     <h3>From Howard Chang Lab (Stanford)</h3>
     <ol>
-      <li>2.	Oh S, Flynn RA, Floor SN, Purzner J, Martin L, <b>Do BT</b>, Schubert S, Vaka D, Adams CM, Leib RD, Doudna JA, Chang HY, Cho YJ. Medulloblastoma-associated DDX3 variant selectively alters the translational response to stress. Oncotarget, accepted (2016)</li>
+      <li>Oh S, Flynn RA, Floor SN, Purzner J, Martin L, <b>Do BT</b>, Schubert S, Vaka D, Adams CM, Leib RD, Doudna JA, Chang HY, Cho YJ. Medulloblastoma-associated DDX3 variant selectively alters the translational response to stress. Oncotarget, accepted (2016)</li>
       <li>Zarnegar B, Flynn RA, Shen Y, <b>Do BT</b>, Chang HY, Khavari PA. Ultraefficient irCLIP pipeline for characterization for protein-RNA interactions. Nature Methods, accepted. (2016)</li>
       <li>Tan JL, Fogley RD, Flynn RA, Ablain J, Yang S, Saint-Andre V, Fan ZP, <b>Do BT</b>, …, Chang HY, Young RA, Zon LI. Stress from nucleotide depletion activates the transcriptional regulator HEXIM1 to suppress melanoma. Molecular Cell, accepted (2016)
       <li>Flynn RA, <b>Do BT</b>, Rubin A, Calo E, Lee B, Rale M, Kuchelmeister H, Rale M, Chu C, Kool ET, Wysocka J, Khavari PA, Chang HY. <a href=http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.3176.html>7SK-BAF axis controls pervasive transcription at enhancers.</a> Nature Structural and Molecular Biology (2016)
