--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <td><img width="198" src="brian.PNG"></td>
         </div>
         <div class="col-md-9 panel">
-          Hi! I'm a first-year MD-PhD student in the Medical Scientist Training Program at Harvard Medical School and MIT. During undergrad, I majored in biology and computer science double major at <a href="http://stanford.edu/">Stanford University</a>.<br><br>
+          Hi! I'm a first-year MD-PhD student in the Medical Scientist Training Program at Harvard Medical School and MIT. During undergrad, I majored in biology and computer science at <a href="http://stanford.edu/">Stanford University</a>.<br><br>
           I did my undergrad research with <a href="http://changlab.stanford.edu">Dr. Howard Chang</a>. I studied noncoding RNAs and their structure, interactions, and function. We discovered how these RNAs orchestrate gene regulation, cell fate, and many other processes through noncanonical functions. Previously, I worked with <a href="http://urogene.org">Dr. Long-Cheng Li</a> at UCSF on small RNA-mediated gene activation in the worm C. elegans. <br><br>
           I'm also excited by the role of technology in healthcare and other industries. During summer 2015, I interned at <a href="http://www.flatiron.com">Flatiron Health</a> in New York City as a Data Insights Engineer, where I helped build analytics tools on top of a million-patient clinicogenomic database that will be used for drug discovery and personalized medicine. <br><br>
           In my free time I love running and biking. I follow college football pretty avidly and love learning new skills, whether it's a new instrument, programming language, or sport. Finally, I love tacos. Contact me if you know of a great taco place. <br><br>
