--- a/research.html
+++ b/research.html
@@ -42,8 +42,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="#">Research Interests</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <li><a href="software.html">Software</a></li>
-            <li><a href="other.html">Other</a></li> 
+            <li><a href="software.html">Projects</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -56,15 +55,16 @@
     <h3>Broad Goals</h3>
     <ul>
       <li>
-      <b>Noncoding RNAs:</b> 
-    How are they chemically and quantitatively regulated?
-    Can their structure predict function?
-    How do they transmit epigenetic memory across generations?
+      <b>Proteins:</b> 
+    How prevalent are intrinsically disordered domains in the human proteome? 
+    Are there functional prion-like domains being positively selected for?
+    How can we design better drugs using IDPs?
     </li>
     
       <li>
       <b>Gene regulation:</b>
-      How is chromatin organized in 3D space in the nucleus?
+      How is chromatin organized in 3D space in the nucleus? 
+      How are promoter-enhancer contacts precisely regulated?
       </li>
     
       <li>
