--- a/software.html
+++ b/software.html
@@ -9,7 +9,7 @@
     <meta name="Brian Do" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Software: Brian Do</title>
+    <title>Projects: Brian Do</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
@@ -42,14 +42,16 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research Interests</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <li class="active"><a href="#">Software</a></li>
-            <li><a href="other.html">Other</a></li>
+            <li class="active"><a href="#">Projects</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
   <div class="container panel">
-    <h1>Software</h1>
+    <h1>Projects</h1>
+    See my code on <a href="http://github.com/bdo311">GitHub</a>. I code primarily in Python and R, and I have proficiency in C, C++, and Julia. 
+
+    <h3>Biology</h3>
     I have built or contributed to several projects that have dramatically sped up my computational biology workflow.
     <h4><a href="https://github.com/ChangLab/FAST-iCLIP">FAST-iCLIP</a></h4>
     This is a complete pipeline to analyze RNA-protein interactions at nucleotide resolution. 
@@ -61,8 +63,11 @@
       <li>CLIP-seq RNA-protein interaction data</li>
       <li>Replication timing</li>
     </ul>
+    
+    <h3>Data explorations</h3>
+    <h4><a href="https://github.com/ludazhao/SherlockNet">SherlockNet</a></h4>
+    We implemented convolutional neural networks to automatically tag and caption 1 million images scanned from 15th through 19th century books in the British Library 1M collection. Our work won the <a href="http://labs.bl.uk/British+Library+Labs+Competition">2016 British Library Labs Competition</a>. Check out our web portal <a href="bit.ly/sherlocknet">here</a>.
     <br>
-    See my code on <a href="http://github.com/bdo311">GitHub</a>. I code primarily in Python and R, and I have proficiency in C, C++, and Julia. 
 
   </div>
 
