--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
             <li><a href="research.html">Research Interests</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="software.html">Software</a></li>
-            <li><a href="other.html">Other</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/container -->
@@ -58,8 +57,8 @@
           Hi! I'm a first-year MD-PhD student in the Medical Scientist Training Program at Harvard Medical School and MIT. During undergrad, I majored in biology and computer science at <a href="http://stanford.edu/">Stanford University</a>.<br><br>
           I did my undergrad research with <a href="http://changlab.stanford.edu">Dr. Howard Chang</a>. I studied noncoding RNAs and their structure, interactions, and function. We discovered how these RNAs orchestrate gene regulation, cell fate, and many other processes through noncanonical functions. Previously, I worked with <a href="http://urogene.org">Dr. Long-Cheng Li</a> at UCSF on small RNA-mediated gene activation in the worm C. elegans. <br><br>
           I'm also excited by the role of technology in healthcare and other industries. During summer 2015, I interned at <a href="http://www.flatiron.com">Flatiron Health</a> in New York City as a Data Insights Engineer, where I helped build analytics tools on top of a million-patient clinicogenomic database that will be used for drug discovery and personalized medicine. <br><br>
-          In my free time I love running and biking. I follow college football pretty avidly and love learning new skills, whether it's a new instrument, programming language, or sport. Finally, I love tacos. Contact me if you know of a great taco place. <br><br>
-          Email me at briando at mit.edu or beedo at mit.edu or taco at mit.edu. All three will get you to me.
+          In my free time I love running, sailing, biking, and learning to bake. I follow college football pretty avidly and love learning new skills, whether it's a new instrument, programming language, or sport. Finally, I love tacos. Contact me if you know of a great taco place. <br><br>
+          Email me at briando at mit.edu or brian_do at hms.harvard.edu.
         </div>
       </div>
     </div>
