--- a/publications.html
+++ b/publications.html
@@ -42,8 +42,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research Interests</a></li>
             <li class="active"><a href="#">Publications</a></li>
-            <li><a href="software.html">Software</a></li>
-            <li><a href="other.html">Other</a></li>
+            <li><a href="software.html">Projects</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
