--- a/publications.html
+++ b/publications.html
@@ -50,8 +50,12 @@
     
   <div class="container panel">
     <h1>Publications</h1>
-    <h3>From Howard Chang Lab (Stanford)</h3>
+    <h3>Grad school</h3>
     <ol>
+      <li>Ching T, Himmelstein DS, Beaulieu-Jones BK, Kalinin AA, <b>Do BT</b>, Way GP, Ferrero E, Agapow P-M, Xie W, Rosen GL, Lengerich BJ, Israeli J, Lanchantin J, Woloszynek S, Carpenter AE, Shrikumar A, Xu J, Cofer EM, Harris DJ, DeCaprio D, Qi Y, Kundaje A, Peng Y, Wiley LK, Segler MHS, Gitter A, Greene CS. <a href=http://biorxiv.org/content/early/2017/05/28/142760>Opportunities and obstacles for deep learning in biology and medicine.</a> bioRxiv (2017)</li>
+    </ol>
+    <h3>Undergrad</h3>
+    <ol start="2">
       <li>Oh S, Flynn RA, Floor SN, Purzner J, Martin L, <b>Do BT</b>, Schubert S, Vaka D, Adams CM, Leib RD, Doudna JA, Chang HY, Cho YJ. <a href=http://www.impactjournals.com/oncotarget/index.php?journal=oncotarget&page=article&op=view&path[]=8612&pubmed-linkout=1>Medulloblastoma-associated DDX3 variant selectively alters the translational response to stress.</a> Oncotarget (2016)</li>
       <li>Zarnegar B, Flynn RA, Shen Y, <b>Do BT</b>, Chang HY, Khavari PA. <a href=http://www.nature.com/nmeth/journal/vaop/ncurrent/full/nmeth.3840.html>Ultraefficient irCLIP pipeline for characterization for protein-RNA interactions.</a> Nature Methods (2016)</li>
       <li>Tan JL, Fogley RD, Flynn RA, Ablain J, Yang S, Saint-Andre V, Fan ZP, <b>Do BT</b>, …, Chang HY, Young RA, Zon LI. <a href=http://www.ncbi.nlm.nih.gov/pubmed/27058786>Stress from nucleotide depletion activates the transcriptional regulator HEXIM1 to suppress melanoma.</a> Molecular Cell (2016)
