--- a/publications.html
+++ b/publications.html
@@ -51,21 +51,105 @@
   <div class="container panel">
     <h1>Publications</h1>
     <h3>Grad school</h3>
-    <ol>
-      <li>Ching T, Himmelstein DS, Beaulieu-Jones BK, Kalinin AA, <b>Do BT</b>, Way GP, Ferrero E, Agapow P-M, Xie W, Rosen GL, Lengerich BJ, Israeli J, Lanchantin J, Woloszynek S, Carpenter AE, Shrikumar A, Xu J, Cofer EM, Harris DJ, DeCaprio D, Qi Y, Kundaje A, Peng Y, Wiley LK, Segler MHS, Gitter A, Greene CS. <a href=http://biorxiv.org/content/early/2017/05/28/142760>Opportunities and obstacles for deep learning in biology and medicine.</a> bioRxiv (2017)</li>
-    </ol>
-    <h3>Undergrad</h3>
-    <ol start="2">
-      <li>Oh S, Flynn RA, Floor SN, Purzner J, Martin L, <b>Do BT</b>, Schubert S, Vaka D, Adams CM, Leib RD, Doudna JA, Chang HY, Cho YJ. <a href=http://www.impactjournals.com/oncotarget/index.php?journal=oncotarget&page=article&op=view&path[]=8612&pubmed-linkout=1>Medulloblastoma-associated DDX3 variant selectively alters the translational response to stress.</a> Oncotarget (2016)</li>
-      <li>Zarnegar B, Flynn RA, Shen Y, <b>Do BT</b>, Chang HY, Khavari PA. <a href=http://www.nature.com/nmeth/journal/vaop/ncurrent/full/nmeth.3840.html>Ultraefficient irCLIP pipeline for characterization for protein-RNA interactions.</a> Nature Methods (2016)</li>
-      <li>Tan JL, Fogley RD, Flynn RA, Ablain J, Yang S, Saint-Andre V, Fan ZP, <b>Do BT</b>, …, Chang HY, Young RA, Zon LI. <a href=http://www.ncbi.nlm.nih.gov/pubmed/27058786>Stress from nucleotide depletion activates the transcriptional regulator HEXIM1 to suppress melanoma.</a> Molecular Cell (2016)
-      <li>Flynn RA, <b>Do BT</b>, Rubin A, Calo E, Lee B, Rale M, Kuchelmeister H, Rale M, Chu C, Kool ET, Wysocka J, Khavari PA, Chang HY. <a href=http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.3176.html>7SK-BAF axis controls pervasive transcription at enhancers.</a> Nature Structural and Molecular Biology (2016)
-      <li>Flynn RA, Martin L, Spitale RC, <b>Do BT</b>, Sagan SM, Zarnegar B, Qu K, Khavari PA, Quake SR, Sarnow P, Chang HY. <a href=http://rnajournal.cshlp.org/content/early/2014/11/19/rna.047803.114?top=1>Dissecting non-coding and pathogen RNA-protein interactomes.</a> RNA (2015)
-      <li>Zheng GXY, <b>Do BT</b>, Webster DE, Khavari PA, Chang HY. <a href="http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.2842.html">Dicer-microRNA-Myc circuit promotes transcription of hundreds of long noncoding RNAs.</a> Nature Structural and Molecular Biology (2014)
-    </ol>
+  </div>
+   <div class="container">
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/deeplearning.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href=http://biorxiv.org/content/early/2017/05/28/142760>Opportunities and obstacles for deep learning in biology and medicine.</a> </h4>
+          <h5>Ching T, Himmelstein DS, Beaulieu-Jones BK, Kalinin AA, <b>Do BT</b>, Way GP, Ferrero E, Agapow P-M, Xie W, Rosen GL, Lengerich BJ, Israeli J, Lanchantin J, Woloszynek S, Carpenter AE, Shrikumar A, Xu J, Cofer EM, Harris DJ, DeCaprio D, Qi Y, Kundaje A, Peng Y, Wiley LK, Segler MHS, Gitter A, Greene CS. </h5>
+          bioRxiv (2017)
+        </div>
+      </div>
+    </div>
 
+  <div class="container panel">
+    <h3>Undergrad</h3>
+  </div>
+   <div class="container">
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/ddx3.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href=http://www.impactjournals.com/oncotarget/index.php?journal=oncotarget&page=article&op=view&path[]=8612&pubmed-linkout=1>Medulloblastoma-associated DDX3 variant selectively alters the translational response to stress.</a> </h4>
+          <h5>Oh S, Flynn RA, Floor SN, Purzner J, Martin L, <b>Do BT</b>, Schubert S, Vaka D, Adams CM, Leib RD, Doudna JA, Chang HY, Cho YJ. </h5>
+          Oncotarget (2016)
+        </div>
+      </div>
+      <br>
+
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/fasticlip.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href=http://www.nature.com/nmeth/journal/vaop/ncurrent/full/nmeth.3840.html>Ultraefficient irCLIP pipeline for characterization for protein-RNA interactions.</a> </h4>
+          <h5>Zarnegar B, Flynn RA, Shen Y, <b>Do BT</b>, Chang HY, Khavari PA.</h5>
+          Nature Methods (2016)
+        </div>
+      </div>
+      <br>
+
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/hexim.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href=http://www.ncbi.nlm.nih.gov/pubmed/27058786>Stress from nucleotide depletion activates the transcriptional regulator HEXIM1 to suppress melanoma.</a> </h4>
+          <h5>Tan JL, Fogley RD, Flynn RA, Ablain J, Yang S, Saint-Andre V, Fan ZP, <b>Do BT</b>, …, Chang HY, Young RA, Zon LI. </h5>
+          Molecular Cell (2016)
+        </div>
+      </div>
+      <br>
+
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/7sk.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href=http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.3176.html>7SK-BAF axis controls pervasive transcription at enhancers.</a> </h4>
+          <h5>Flynn RA, <b>Do BT</b>, Rubin A, Calo E, Lee B, Rale M, Kuchelmeister H, Rale M, Chu C, Kool ET, Wysocka J, Khavari PA, Chang HY.</h5>
+          Nature Structural and Molecular Biology (2016)
+        </div>
+      </div>
+      <br>
+
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/fasticlip_paper.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href=http://rnajournal.cshlp.org/content/early/2014/11/19/rna.047803.114?top=1>Dissecting non-coding and pathogen RNA-protein interactomes.</a></h4>
+          <h5>Flynn RA, Martin L, Spitale RC, <b>Do BT</b>, Sagan SM, Zarnegar B, Qu K, Khavari PA, Quake SR, Sarnow P, Chang HY.</h5>
+          RNA (2015)
+        </div>
+      </div>
+      <br>
+
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/dicer.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href="http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.2842.html">Dicer-microRNA-Myc circuit promotes transcription of hundreds of long noncoding RNAs.</a></h4>
+          <h5>Zheng GXY, <b>Do BT</b>, Webster DE, Khavari PA, Chang HY.</h5>
+          Nature Structural and Molecular Biology (2014)
+        </div>
+      </div>      
+    </div>
+
+  <br><br>
+
+  <div class="container panel">
     I also keep a running list of papers I've read on <a href="http://www.citeulike.org/user/bdo311/order/posted,,">CiteULike</a>.
   </div>
+
+  <br><br>
+
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
