--- a/software.html
+++ b/software.html
@@ -50,27 +50,59 @@
   <div class="container panel">
     <h1>Projects</h1>
     See my code on <a href="http://github.com/bdo311">GitHub</a>. I code primarily in Python and R, and I have proficiency in C, C++, and Julia. 
-
-    <h3>Biology</h3>
-    I have built or contributed to several projects that have dramatically sped up my computational biology workflow.
-    <h4><a href="https://github.com/ChangLab/FAST-iCLIP">FAST-iCLIP</a></h4>
-    This is a complete pipeline to analyze RNA-protein interactions at nucleotide resolution. 
-    <h4><a href="https://github.com/bdo311/metagene-maker">Metagene Maker</a></h4>
-    This is a tool to visualize genomic information across user-defined genomic regions. It is extremely flexible and can be used to visualize, among other things:
-    <ul>
-      <li>ChIP-seq tracks of transcription factors</li>
-      <li>Transcription measured by GROseq, RNAseq, NETseq, CAGE, etc.</li>
-      <li>CLIP-seq RNA-protein interaction data</li>
-      <li>Replication timing</li>
-    </ul>
-    
-    <h3>Data explorations</h3>
-    <h4><a href="https://github.com/ludazhao/SherlockNet">SherlockNet</a></h4>
-    We implemented convolutional neural networks to automatically tag and caption 1 million images scanned from 15th through 19th century books in the British Library 1M collection. Our work won the <a href="http://labs.bl.uk/British+Library+Labs+Competition">2016 British Library Labs Competition</a>. Check out our web portal <a href="bit.ly/sherlocknet">here</a>.
-    <br>
-
   </div>
 
+  <div class="container panel">
+    <h3>Biology</h3>
+      I have built or contributed to several projects that have dramatically sped up my computational biology workflow.
+  </div>
+   <div class="container">
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/fasticlip.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href="https://github.com/ChangLab/FAST-iCLIP">FAST-iCLIP</a></h4>
+          This is a complete pipeline to analyze RNA-protein interactions at nucleotide resolution. 
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/metagenes.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href="https://github.com/bdo311/metagene-maker">Metagene Maker</a></h4>
+          This is a tool to visualize genomic information across user-defined genomic regions. It is extremely flexible and can be used to visualize, among other things:
+          <ul>
+            <li>ChIP-seq tracks of transcription factors</li>
+            <li>Transcription measured by GROseq, RNAseq, NETseq, CAGE, etc.</li>
+            <li>CLIP-seq RNA-protein interaction data</li>
+            <li>Replication timing</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  <div class="container panel">
+    <h3>Data explorations</h3>
+  </div>
+   <div class="container">
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/sherlocknet.PNG"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href="https://github.com/ludazhao/SherlockNet">SherlockNet</a></h4>
+          We implemented convolutional neural networks to automatically tag and caption 1 million images scanned from 15th through 19th century books in the British Library 1M collection. Our work won the <a href="http://labs.bl.uk/British+Library+Labs+Competition">2016 British Library Labs Competition</a>. Check out our web portal <a href="http://bit.ly/sherlocknet">here</a>.
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <br>
+
+ 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
