rel links to pictures

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="pictures/brian.PNG"></td>
+          <td><img width="198" src="./pictures/brian.PNG"></td>
         </div>
         <div class="col-md-9 panel">
           Hi! I'm a second-year MD-PhD student in the Medical Scientist Training Program at Harvard Medical School and MIT. During undergrad, I majored in biology and computer science at <a href="http://stanford.edu/">Stanford University</a>.<br><br>
