--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
    <div class="container">
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="pictures/deeplearning.PNG"></td>
+          <td><img width="198" src="./pictures/deeplearning.PNG"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href=http://biorxiv.org/content/early/2017/05/28/142760>Opportunities and obstacles for deep learning in biology and medicine.</a> </h4>
@@ -71,7 +71,7 @@
    <div class="container">
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="pictures/ddx3.PNG"></td>
+          <td><img width="198" src="./pictures/ddx3.PNG"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href=http://www.impactjournals.com/oncotarget/index.php?journal=oncotarget&page=article&op=view&path[]=8612&pubmed-linkout=1>Medulloblastoma-associated DDX3 variant selectively alters the translational response to stress.</a> </h4>
@@ -83,7 +83,7 @@
 
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="pictures/fasticlip.PNG"></td>
+          <td><img width="198" src="./pictures/fasticlip.PNG"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href=http://www.nature.com/nmeth/journal/vaop/ncurrent/full/nmeth.3840.html>Ultraefficient irCLIP pipeline for characterization for protein-RNA interactions.</a> </h4>
@@ -95,7 +95,7 @@
 
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="pictures/hexim.PNG"></td>
+          <td><img width="198" src="./pictures/hexim.PNG"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href=http://www.ncbi.nlm.nih.gov/pubmed/27058786>Stress from nucleotide depletion activates the transcriptional regulator HEXIM1 to suppress melanoma.</a> </h4>
@@ -107,7 +107,7 @@
 
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="pictures/7sk.PNG"></td>
+          <td><img width="198" src="./pictures/7sk.PNG"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href=http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.3176.html>7SK-BAF axis controls pervasive transcription at enhancers.</a> </h4>
@@ -119,7 +119,7 @@
 
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="pictures/fasticlip_paper.PNG"></td>
+          <td><img width="198" src="./pictures/fasticlip_paper.PNG"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href=http://rnajournal.cshlp.org/content/early/2014/11/19/rna.047803.114?top=1>Dissecting non-coding and pathogen RNA-protein interactomes.</a></h4>
@@ -131,7 +131,7 @@
 
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="pictures/dicer.PNG"></td>
+          <td><img width="198" src="./pictures/dicer.PNG"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href="http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.2842.html">Dicer-microRNA-Myc circuit promotes transcription of hundreds of long noncoding RNAs.</a></h4>
