rel links to pictures

--- a/software.html
+++ b/software.html
@@ -59,7 +59,7 @@
    <div class="container">
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="./pictures/fasticlip.PNG"></td>
+          <td><img width="198" src="./pictures/fasticlip.png"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href="https://github.com/ChangLab/FAST-iCLIP">FAST-iCLIP</a></h4>
@@ -69,7 +69,7 @@
       <br>
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="./pictures/metagenes.PNG"></td>
+          <td><img width="198" src="./pictures/metagenes.png"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href="https://github.com/bdo311/metagene-maker">Metagene Maker</a></h4>
@@ -90,7 +90,7 @@
    <div class="container">
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="pictures/sherlocknet.PNG"></td>
+          <td><img width="198" src="pictures/sherlocknet.png"></td>
         </div>
         <div class="col-md-9 panel">
           <h4><a href="https://github.com/ludazhao/SherlockNet">SherlockNet</a></h4>
