added links to blog

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <li><a href="research.html">Research Interests</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="software.html">Software</a></li>
+            <li><a href="/blog">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/container -->
