--- a/publications.html
+++ b/publications.html
@@ -43,6 +43,7 @@
             <li><a href="research.html">Research Interests</a></li>
             <li class="active"><a href="#">Publications</a></li>
             <li><a href="software.html">Projects</a></li>
+            <li><a href="/blog">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -62,7 +63,7 @@
           <h5>Ching T, Himmelstein DS, Beaulieu-Jones BK, Kalinin AA, <b>Do BT</b>, Way GP, Ferrero E, Agapow P-M, Xie W, Rosen GL, Lengerich BJ, Israeli J, Lanchantin J, Woloszynek S, Carpenter AE, Shrikumar A, Xu J, Cofer EM, Harris DJ, DeCaprio D, Qi Y, Kundaje A, Peng Y, Wiley LK, Segler MHS, Gitter A, Greene CS. </h5>
           bioRxiv (2017)
           <br><br>
-          - Most viewed bioRxiv preprint of spring 2017 (<a href=https://www.nature.com/articles/d41586-017-08493-x>link</href>)
+          - Most viewed bioRxiv preprint of spring 2017 (<a href=https://www.nature.com/articles/d41586-017-08493-x>link</a>)
         </div>
       </div>
     </div>
