--- a/research.html
+++ b/research.html
@@ -35,14 +35,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Brian Do</a>
+          <a class="navbar-brand" href="/index.html">Brian Do</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li class="active"><a href="#">Research Interests</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="software.html">Projects</a></li>
+            <li><a href="/publications.html">Publications</a></li>
+            <li><a href="/software.html">Projects</a></li>
+            <li><a href="/blog">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
