--- a/publications.html
+++ b/publications.html
@@ -59,9 +59,9 @@
           <td><img width="198" src="./pictures/deeplearning.png"></td>
         </div>
         <div class="col-md-9 panel">
-          <h4><a href=http://biorxiv.org/content/early/2017/05/28/142760>Opportunities and obstacles for deep learning in biology and medicine.</a> </h4>
+          <h4><a href=http://rsif.royalsocietypublishing.org/content/15/141/20170387>Opportunities and obstacles for deep learning in biology and medicine.</a> </h4>
           <h5>Ching T, Himmelstein DS, Beaulieu-Jones BK, Kalinin AA, <b>Do BT</b>, Way GP, Ferrero E, Agapow P-M, Xie W, Rosen GL, Lengerich BJ, Israeli J, Lanchantin J, Woloszynek S, Carpenter AE, Shrikumar A, Xu J, Cofer EM, Harris DJ, DeCaprio D, Qi Y, Kundaje A, Peng Y, Wiley LK, Segler MHS, Gitter A, Greene CS. </h5>
-          bioRxiv (2017)
+          Journal of the Royal Society Interface (2018)
           <br><br>
           - Most viewed bioRxiv preprint of spring 2017 (<a href=https://www.nature.com/articles/d41586-017-08493-x>link</a>)
         </div>
